# random_pizza

./: pyproject.toml
random_pizza/: manage.py
random_pizza/delivery/: models.py
random_pizza/delivery/migrations/: 0001_initial.py
random_pizza/pizza/: models.py
random_pizza/pizza/migrations/: 0001_initial.py  0002_ingredient_pizza_ingredients.py  0003_remove_tag_slug.py
random_pizza/random_pizza/: asgi.py  settings.py  urls.py  wsgi.py
random_pizza/users/: models.py
random_pizza/users/migrations/: 0001_initial.py  0002_address.py  0003_cart.py  0004_alter_user_managers.py
