[tool.poetry]
name = "random-pizza"
version = "0.1.0"
description = ""
authors = ["Inso_dev <kira2212@ya.ru>"]
readme = "README.md"
packages = [{include = "random_pizza"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
